# lounaat-info

./: .env.example  .gitignore  README.md
py/: main.py  pyproject.toml
py/lounaat_info/: __init__.py  custom_types.py  discord.py  fetch.py  parse.py
py/tests/: test_fetch.py  test_lounaat_info.py  test_parse.py
