[tool.poetry]
name = "lounaat-info"
version = "0.1.0"
description = ""
authors = ["puttehi <peteeez95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
slack = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.960"
pylint = "^2.14.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
